apps/plantwiki-dev/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plantwiki-dev
  labels:
    name: plantwiki-dev
