apps/plantwiki-dev/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: plantwiki-dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`plantwiki.trivernis.dev`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: plantwiki-dev
      port: http
